--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "mockery/mockery": "dev-master",
-        "mikey179/vfsStream": "v1.2.0"
+        "mikey179/vfsstream": "v1.2.0"
     },
     "autoload": {
         "psr-0": {
