--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "mockery/mockery": "dev-master",
+        "mockery/mockery": "*",
         "mikey179/vfsstream": "v1.2.0"
     },
     "autoload": {
