--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,18 @@
         "mathiasverraes/money": "1.2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
+        "phpunit/phpunit": "^8.5",
         "mockery/mockery": "*",
         "mikey179/vfsstream": "v1.2.0"
     },
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "": "src/"
         }
-    }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+  }
 }
