--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: php-actions/composer@v5
     - uses: php-actions/phpunit@v3
+    - name: PHPUnit tests
+      uses: php-actions/phpunit@v3
+      with:
+        version: 8.5
+        php_version: 7.4
