--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "juit/aqbanking-php": "*"
     },
     "require": {
-        "php": ">=5.3.0",
+        "php": "^7.1",
         "mathiasverraes/money": "1.2.0"
     },
     "require-dev": {
