--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: PHP Composer
+      uses: php-actions/composer@v5
+      with:
+        php_version: 7.1
     - uses: php-actions/composer@v5
-    - uses: php-actions/phpunit@v3
     - name: PHPUnit tests
       uses: php-actions/phpunit@v3
       with:
         version: 8.5
-        php_version: 7.4
+        php_version: 7.1
