--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: PHP Composer
-      uses: php-actions/composer@v5
+      uses: php-actions/composer@v6
       with:
-        php_version: 7.2
+        php_version: 8.1
+        php_extensions: "bcmath"
     - name: PHPUnit tests
       uses: php-actions/phpunit@v3
       with:
         version: 8.5
-        php_version: 7.2
+        php_version: 8.1
