refactor filestructure to PSR-4

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "AqBanking\\": "src/"
         }
     },
     "autoload-dev": {
