--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,26 @@
 name: CI
 
-on: [push]
+on: [ push ]
 
 jobs:
-  build-test:
+  check:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: PHP Composer
-      uses: php-actions/composer@v6
-      with:
-        php_version: 8.1
-        php_extensions: "bcmath"
-    - name: PHPUnit tests
-      uses: php-actions/phpunit@v3
-      with:
-        version: 8.5
-        php_version: 8.1
+      - name: Checkout project
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        uses: php-actions/composer@v6
+        with:
+          php_version: 8.1
+          php_extensions: "bcmath"
+
+      - name: Check formatting
+        run: ./vendor/bin/ecs check
+
+      - name: Run tests
+        uses: php-actions/phpunit@v3
+        with:
+          version: 8.5
+          php_version: 8.1
