--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,15 @@
     "require": {
         "php": "^8.1",
         "ext-dom": "*",
+        "ext-simplexml": "*",
         "moneyphp/money": "^4.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^10.5",
         "mockery/mockery": "*",
         "mikey179/vfsstream": "^1.6",
-        "symplify/easy-coding-standard": "^12.0"
+        "symplify/easy-coding-standard": "^12.0",
+        "phpstan/phpstan": "^1.10"
     },
     "autoload": {
         "psr-4": {
